--- a/html/style/sass/_navbar.scss
+++ b/html/style/sass/_navbar.scss
@@ -1,5 +1,95 @@
 nav {
+    position: relative;
     height: 70px;
     width: 100%;
     background-color: $color-contrastBlack;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 25px;
+    
+
+    h3{
+        color: $color-accentuation;
+    }
+
+    &>i{
+        color: $color-contrastWhite;
+        font-size: 20px;
+    }
+
+    &.active{
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: $color-contrastBlack;
+
+        display: flex;
+        flex-direction: column;
+
+        &>i[class="bi bi-list"]{
+            display: none;
+        }
+        i[class="bi bi-plus-lg"]{
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 35px;
+            transform: rotate(45deg);
+        }
+        &>h3{
+            display: none;
+        }
+
+
+
+        .top{
+            display : flex;
+            justify-content: space-between;
+            width: 100%;
+            form{
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+                select{
+                    background-color: $color-accentuation;
+                    max-width: 230px;
+                    font-size: 14px;
+                    text-align: center;
+                }
+                .search{
+                    max-width: 230px;
+                    border: none;
+                    border-radius: 5px;
+                    color: $color-contrastWhite;
+                    display: flex;
+
+                    button{
+                        background-color: $color-accentuation;
+                        border-radius: 0px 4px 4px 0px;
+                        width: 40px;
+                    }
+                    input{
+                        background-color: $color-contrastWhite;
+                        border-radius: 4px 0px 0px 4px;
+                    }
+                }
+            }
+        }
+
+
+        .list-items{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 100px;
+
+            h2{
+                text-align: center;
+            }
+        }
+    }
 }
