--- a/html/style/sass/main.scss
+++ b/html/style/sass/main.scss
@@ -5,5 +5,13 @@ body{
 
 @import 'reset';
 @import 'charteGraphique';
-@import 'button';
-@import 'navbar';
+
+@import 'importAbout';
+@import 'importAuthentication';
+@import 'importComponents';
+@import 'importGallery';
+@import 'importGroup';
+@import 'importHome';
+@import 'importImage';
+@import 'importProfile';
+
