SCSS tree creation
Creation of SCSS files structure

--- a/html/style/sass/main.scss
+++ b/html/style/sass/main.scss
@@ -6,12 +6,13 @@ body{
 @import 'reset';
 @import 'charteGraphique';
 
-@import 'about/importAbout';
-@import 'authentication/importAuthentication';
-@import 'components/importComponents';
-@import 'gallery/importGallery';
-@import 'group/importGroup';
-@import 'home/importHome';
-@import 'image/importImage';
-@import 'profile/importProfile';
+
+@import 'importAbout';
+@import 'importAuthentication';
+@import 'importComponents';
+@import 'importGallery';
+@import 'importGroup';
+@import 'importHome';
+@import 'importImage';
+@import 'importProfile';
 
