--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -6,53 +6,386 @@ body {
 *, *:before, *:after {
   box-sizing: border-box; }
 
-Backtrace:
-html/style/sass/main.scss:9
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:44:in `import'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:28:in `imported_file'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:37:in `css_import?'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:310:in `visit_import'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/stack.rb:79:in `with_base'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `map'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:10:in `visit'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/root_node.rb:36:in `css_tree'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:468:in `update_stylesheet'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:449:in `on_file_changed'
-/usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/config.rb:28:in `call'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/processor.rb:117:in `block in _process_changes'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/thread.rb:26:in `rescue_and_log'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/processor.rb:116:in `_process_changes'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/processor.rb:25:in `block in loop_for'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/processor.rb:20:in `loop'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/processor.rb:20:in `loop_for'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/loop.rb:85:in `_process_changes'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/event/loop.rb:51:in `block in start'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/thread.rb:26:in `rescue_and_log'
-/usr/share/rubygems-integration/all/gems/listen-3.7.0/lib/listen/thread.rb:18:in `block in new'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: importAbout.\A        Load path: /home/tahri12u/Documents/github/LP1-CIASIE_Atelier1/html/style/sass\A         on line 9 of html/style/sass/main.scss\A \A 4: }\A 5: \A 6: @import 'reset';\A 7: @import 'charteGraphique';\A 8: \A 9: @import 'importAbout';\A 10: @import 'importAuthentication';\A 11: @import 'importComponents';\A 12: @import 'importGallery';\A 13: @import 'importGroup';\A 14: @import 'importHome';"; }
+html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  text-size-adjust: none; }
+
+footer, header, nav, section, main {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+input {
+  border-radius: 0; }
+
+a {
+  text-decoration: none;
+  color: inherit; }
+
+body {
+  background-color: #FFF;
+  font-family: poppins, sans-serif;
+  color: #0B162C; }
+
+h1 {
+  font-size: 32px;
+  font-weight: 800; }
+
+h2 {
+  font-size: 24px;
+  font-weight: 700; }
+
+h3 {
+  font-size: 18px;
+  font-weight: 500; }
+
+p {
+  font-size: 16px;
+  font-weight: 400; }
+
+.p-secondary {
+  font-size: 14px;
+  font-weight: 400; }
+
+input, select, button {
+  border: none;
+  border-radius: 4px;
+  height: 30px; }
+
+input {
+  background-color: #D9D9D9;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  width: 190px;
+  color: #0B162C; }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 20px; }
+
+nav {
+  position: relative;
+  height: 70px;
+  width: 100%;
+  background-color: #0B162C;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 5%; }
+  nav h3 {
+    color: #16CFE9; }
+  nav form {
+    display: flex; }
+    nav form select {
+      width: 110px;
+      background-color: #16CFE9;
+      font-size: 14px;
+      text-align: left;
+      border-radius: 4px 0px 0px 4px; }
+    nav form .search {
+      border: none;
+      color: #F4F4F4;
+      display: flex; }
+      nav form .search button {
+        background-color: #16CFE9;
+        border-radius: 0px 4px 4px 0px;
+        width: 40px; }
+      nav form .search input {
+        background-color: #F4F4F4;
+        border-radius: 0px;
+        max-width: calc(100% - 40px);
+        width: 100%; }
+  nav > i {
+    color: #F4F4F4;
+    font-size: 20px; }
+  nav .top {
+    display: none; }
+  nav .list-items {
+    display: none; }
+  nav i[class="bi bi-plus-lg"] {
+    display: none; }
+  nav #dropdownNav {
+    display: none; }
+  @media screen and (min-width: 570px) {
+    nav .top {
+      display: flex; } }
+  @media screen and (min-width: 1180px) {
+    nav .mediaquery {
+      display: none; }
+    nav .list-items {
+      display: flex;
+      color: #F4F4F4;
+      align-items: center;
+      gap: 30px; }
+      nav .list-items h2 {
+        font-size: 18px;
+        font-weight: 500px; }
+        nav .list-items h2#login {
+          width: 150px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          border: none;
+          border-radius: 4px;
+          font-size: 16px;
+          line-height: 24px;
+          font-weight: 400;
+          background-color: #F4F4F4;
+          color: #0B162C; }
+        nav .list-items h2#register {
+          width: 150px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          border: none;
+          border-radius: 4px;
+          font-size: 16px;
+          line-height: 24px;
+          font-weight: 400;
+          background-color: #16CFE9;
+          color: #0B162C; }
+    nav i[class="bi bi-list"] {
+      display: none; }
+    nav #dropdownNav {
+      position: relative;
+      display: block; }
+      nav #dropdownNav img {
+        border-radius: 100%;
+        height: 50px;
+        aspect-ratio: 1/1;
+        object-fit: cover; }
+      nav #dropdownNav .dropdown-content {
+        position: absolute;
+        top: 80px;
+        left: -65px;
+        background-color: #F4F4F4;
+        min-width: 160px;
+        border-radius: 4px; }
+        nav #dropdownNav .dropdown-content .items {
+          z-index: 2;
+          overflow: hidden;
+          height: 0px;
+          transition: height .3s ease-in-out .2s; }
+          nav #dropdownNav .dropdown-content .items a {
+            color: #0B162C;
+            text-align: center;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: background-color .1s ease-in-out; }
+          nav #dropdownNav .dropdown-content .items a:hover {
+            background-color: #16CFE9; }
+        nav #dropdownNav .dropdown-content::before {
+          content: "";
+          position: absolute;
+          top: -10px;
+          left: 50%;
+          transform: translateX(-50%);
+          display: block;
+          width: 15px;
+          height: 0px;
+          background-color: #F4F4F4;
+          clip-path: polygon(50% 0, 100% 100%, 0 100%);
+          z-index: -1;
+          transition: height .1s ease-in-out .4s; }
+      nav #dropdownNav:hover .dropdown-content::before, nav #dropdownNav .items:hover::before {
+        height: 15px;
+        transition: height 0s ease-in-out 0s; }
+      nav #dropdownNav:hover .dropdown-content .items, nav #dropdownNav:hover .dropdown-content .items:hover, nav #dropdownNav .items:hover .items, nav #dropdownNav .items:hover .items:hover {
+        height: 120px;
+        transition: height .3s ease-in-out 0s; } }
+  nav.active {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0B162C;
+    display: flex;
+    flex-direction: column; }
+    nav.active > i[class="bi bi-list"] {
+      display: none; }
+    nav.active i[class="bi bi-plus-lg"] {
+      display: block;
+      color: #F4F4F4;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 35px;
+      transform: rotate(45deg); }
+    nav.active > h3 {
+      display: none; }
+    nav.active .top {
+      display: flex;
+      justify-content: space-between;
+      width: 100%; }
+      nav.active .top form {
+        flex-direction: column;
+        gap: 15px;
+        width: 100%;
+        max-width: calc(100% - 50px); }
+        nav.active .top form select {
+          width: 100%;
+          text-align: center;
+          border-radius: 4px; }
+        nav.active .top form .search {
+          color: #F4F4F4; }
+          nav.active .top form .search input {
+            border-radius: 4px 0px 0px 4px;
+            max-width: calc(100% - 40px);
+            width: 100%; }
+    nav.active .list-items {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 45px; }
+      nav.active .list-items h2 {
+        color: #F4F4F4;
+        padding: 30px;
+        text-align: center; }
+
+.login > * {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 10px 0 20px 0; }
+
+.login h2 {
+  margin-top: 4em;
+  text-align: center; }
+
+#connexion {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4; }
+
+.login a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C; }
+
+.regist div {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box; }
+
+.regist h2 {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  text-align: center; }
+
+.regist input {
+  margin-bottom: 2em;
+  width: 100%; }
+
+.regist div div {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box; }
+
+#inscription {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-bottom: 1em; }
+
+.regist a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C; }
+
+@media screen and (min-width: 500px) {
+  .regist div div {
+    flex-direction: row; }
+
+  .regist div div div {
+    white-space: nowrap; }
+
+  .regist div div div {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%; }
+
+  .regist div div div:nth-child(2n+1) {
+    margin-right: 3em; }
+
+  .regist div div:nth-child(4) {
+    display: flex;
+    flex-direction: column; }
+
+  #inscription, .regist div div a {
+    width: 100%; } }
+
+/*# sourceMappingURL=main.css.map */
