--- a/html/style/sass/components/_navbar.scss
+++ b/html/style/sass/components/_navbar.scss
@@ -100,7 +100,6 @@ nav {
                 background-color: $color-contrastWhite;
                 min-width: 160px;
                 border-radius: 4px;
-                z-index: 1;
                 
                 .items{
                     z-index: 2;
@@ -124,22 +123,23 @@ nav {
                 &::before{
                     content: "";
                     position: absolute;
-                    top: -5px;
+                    top: -10px;
                     left: 50%;
-                    transform: translateX(-50%) rotate(45deg);
+                    transform: translateX(-50%);
                     display: block;
                     width: 15px;
                     height: 0px;
                     background-color: $color-contrastWhite;
-                    z-index: 0;
-                    transition: height .1s ease-in-out .2s;
+                    clip-path: polygon(50% 0, 100% 100%, 0 100%);
+                    z-index: -1;
+                    transition: height .1s ease-in-out .4s;
                 }
                 
             }
             &:hover .dropdown-content, .items:hover{
                 &::before{
                     height: 15px;
-                    transition: height .1s ease-in-out 0s;
+                    transition: height 0s ease-in-out 0s;
                 }
                 .items, .items:hover{
                     height: 3 * 40px;
