--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -335,8 +335,57 @@ nav.active .list-items h2 {
   text-align: center;
 }
 
-#image-title {
+#pictureView-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 75px 0px;
+}
+
+#picture-header {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px 50px;
+}
+#picture-header #picture {
+  position: relative;
+  width: 100%;
+  max-width: 1100px;
+  border-radius: 4px;
+}
+#picture-header #picture-infos {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px 0px;
+}
+#picture-header #picture-infos div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0px;
+}
+
+#comments #comments-header {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px 25px;
+}
+#comments a {
+  width: 270px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  cursor: pointer;
 }
 
 #gallery-list {
