Create function to show files uploaded

--- a/html/style/sass/components/_button.scss
+++ b/html/style/sass/components/_button.scss
@@ -36,3 +36,9 @@
     background-color: $color-red;
     color: $color-contrastWhite;
 }
+
+@mixin buttonInput($width){
+    @include button($width);
+    background-color: $color-input;
+    color: $color-contrastBlack;
+}
