--- a/html/style/sass/_charteGraphique.scss
+++ b/html/style/sass/_charteGraphique.scss
@@ -39,7 +39,7 @@ p{
     font-weight: 400;
 }
 
-input, select, button{
+input, select, button, textarea{
     border: none;
     border-radius: 4px;
     height: 30px;
@@ -50,7 +50,7 @@ input{
     padding: 10px;
     font-size: 14px;
     font-weight: 400;
-    max-width: 190px;
+    width: 100%;
     color: $color-contrastBlack;
 }
 
