--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -1,234 +1,19 @@
-@import url("https://use.typekit.net/rlk3vzd.css");
-body {
-  background-color: #151515;
-  color: #f4f4f4;
-}
+/* Error: Undefined mixin.
+ *   ,
+ * 7 |     @include buttonInput(219px);
+ *   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   html\style\sass\group\_groupCreate.scss 7:5  @import
+ *   html\style\sass\group\_importGroup.scss 1:9  @import
+ *   html\style\sass\main.scss 13:9               root stylesheet */
 
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  text-size-adjust: none;
-}
-
-footer, header, nav, section, main {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined mixin.\a   \2577 \a 7 \2502      @include buttonInput(219px);\d\a   \2502      ^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   html\\style\\sass\\group\\_groupCreate.scss 7:5  @import\a   html\\style\\sass\\group\\_importGroup.scss 1:9  @import\a   html\\style\\sass\\main.scss 13:9               root stylesheet";
 }
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after, q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-input {
-  border-radius: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-body {
-  background-color: #FFF;
-  font-family: poppins, sans-serif;
-  color: #0B162C;
-}
-
-h1 {
-  font-size: 32px;
-  font-weight: 800;
-}
-
-h2 {
-  font-size: 24px;
-  font-weight: 700;
-}
-
-h3 {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-p {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.p-secondary {
-  font-size: 14px;
-  font-weight: 400;
-}
-
-input, select, button {
-  border: none;
-  border-radius: 4px;
-  height: 30px;
-}
-
-input {
-  background-color: #D9D9D9;
-  padding: 10px;
-  font-size: 14px;
-  font-weight: 400;
-  max-width: 190px;
-  color: #0B162C;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding: 20px;
-}
-
-nav {
-  position: relative;
-  height: 70px;
-  width: 100%;
-  background-color: #0B162C;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 5%;
-}
-nav h3 {
-  color: #16CFE9;
-}
-nav form {
-  display: flex;
-}
-nav form select {
-  width: 110px;
-  background-color: #16CFE9;
-  font-size: 14px;
-  text-align: left;
-  border-radius: 4px 0px 0px 4px;
-}
-nav form .search {
-  border: none;
-  color: #F4F4F4;
-  display: flex;
-}
-nav form .search button {
-  background-color: #16CFE9;
-  border-radius: 0px 4px 4px 0px;
-  width: 40px;
-}
-nav form .search input {
-  background-color: #F4F4F4;
-  border-radius: 0px;
-  max-width: calc(100% - 40px);
-  width: 100%;
-}
-nav > i {
-  color: #F4F4F4;
-  font-size: 20px;
-}
-nav:not(.active) .top {
-  display: none;
-}
-nav:not(.active) i[class="bi bi-plus-lg"] {
-  display: none;
-}
-nav:not(.active) .list-items {
-  display: none;
-}
-nav.active {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: #0B162C;
-  display: flex;
-  flex-direction: column;
-}
-nav.active > i[class="bi bi-list"] {
-  display: none;
-}
-nav.active i[class="bi bi-plus-lg"] {
-  color: #F4F4F4;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 35px;
-  transform: rotate(45deg);
-}
-nav.active > h3 {
-  display: none;
-}
-nav.active .top {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-nav.active .top form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-nav.active .top form select {
-  background-color: #16CFE9;
-  max-width: 230px;
-  font-size: 14px;
-  text-align: center;
-}
-nav.active .top form .search {
-  max-width: 230px;
-  border: none;
-  border-radius: 5px;
-  color: #F4F4F4;
-  display: flex;
-}
-nav.active .top form .search button {
-  background-color: #16CFE9;
-  border-radius: 0px 4px 4px 0px;
-  width: 40px;
-}
-nav.active .top form .search input {
-  background-color: #F4F4F4;
-  border-radius: 4px 0px 0px 4px;
-}
-nav.active .list-items {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 45px;
-}
-nav.active .list-items h2 {
-  color: #F4F4F4;
-  padding: 30px;
-  text-align: center;
-}
-
-/*# sourceMappingURL=main.css.map */
