--- a/html/style/sass/_charteGraphique.scss
+++ b/html/style/sass/_charteGraphique.scss
@@ -50,7 +50,7 @@ input{
     padding: 10px;
     font-size: 14px;
     font-weight: 400;
-    max-width: 190px;
+    width: 190px;
     color: $color-contrastBlack;
 }
 
