--- a/html/style/sass/components/_button.scss
+++ b/html/style/sass/components/_button.scss
@@ -37,3 +37,9 @@
     color: $color-contrastWhite;
 
 }
+
+@mixin buttonInput($width){
+    @include button($width);
+    background-color: $color-input;
+    color: $color-contrastBlack;
+}
