--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -97,7 +97,7 @@ input {
   padding: 10px;
   font-size: 14px;
   font-weight: 400;
-  max-width: 190px;
+  width: 190px;
   color: #0B162C;
 }
 
@@ -203,6 +203,243 @@ nav.active .list-items h2 {
   color: #F4F4F4;
   padding: 30px;
   text-align: center;
+}
+
+.CreerButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-top: 12px;
+}
+
+.AnnulerButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  display: flex;
+  margin-top: 8px;
+}
+
+#nameGroup {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.form-nameGroup {
+  margin-top: 18px;
+}
+
+#memberName {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.form-nameMember {
+  margin-top: 25px;
+}
+
+.form-CreateGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-CreateGroup input {
+  width: 100%;
+}
+
+.buttons {
+  margin-top: 10px;
+}
+
+@media (min-width: 1000px) {
+  .formul {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 25px;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+  }
+  .AnnulerButton {
+    margin-top: 12px;
+    margin-left: 30px;
+  }
+  .form-nameGroup {
+    width: 503px;
+    margin-right: 30px;
+  }
+  .form-nameMember {
+    width: 503px;
+    margin-top: 18px;
+  }
+  h3 {
+    font-weight: bold;
+  }
+  h2 {
+    margin-bottom: 50px;
+  }
+  .form-CreateGroup {
+    display: flex;
+    align-items: center;
+  }
+}
+.SaveButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-top: 50px;
+}
+
+.CancelButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  display: flex;
+  margin-top: 8px;
+}
+
+.DeleteButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #BF4040;
+  color: #F4F4F4;
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+
+h3 {
+  margin-bottom: 20px;
+}
+
+#nameGroup {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.form-nameGroup {
+  margin-top: 18px;
+}
+
+#memberName {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.form-nameMember {
+  margin-top: 25px;
+}
+
+.form-CreateGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-CreateGroup input {
+  width: 100%;
+}
+
+.buttons {
+  margin-top: 10px;
+}
+
+@media (min-width: 1000px) {
+  .formul {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 25px;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+  }
+  .SaveButton {
+    margin-top: 8px;
+  }
+  .header {
+    display: flex;
+    flex-direction: row;
+  }
+  .DeleteButton {
+    margin-top: 0px;
+    margin-left: 40px;
+  }
+  .form-nameGroup {
+    width: 503px;
+    margin-right: 30px;
+  }
+  .CancelButton {
+    margin-top: 8px;
+    margin-left: 30px;
+  }
+  .form-nameMember {
+    width: 503px;
+    margin-top: 18px;
+  }
+  h3 {
+    font-weight: bold;
+  }
+  h2 {
+    margin-bottom: 50px;
+  }
+  .form-CreateGroup {
+    display: flex;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
