--- a/html/style/sass/authentication/_loginView.scss
+++ b/html/style/sass/authentication/_loginView.scss
@@ -1,24 +1,22 @@
-.formCo>*{
+.login>*{
     display: block;
     width: 100%;
     box-sizing: border-box;
     margin: 10px 0 20px 0;
 }
 
-.formCo h2 {
+.login h2 {
     margin-top: 4em;
     text-align: center;
 }
 
-#connexion, #inscription {
-    width: 100%;
-    background-color: $color-contrastBlack;
-    color: $color-contrastWhite;
+#connexion {
+    @include buttonPrimary(100%);
 }
 
-.formCo a {
-    @extend button;
-    text-align: center;
-    background-color: $color-input;
-    padding: auto;
+
+
+.login a {
+    @include buttonInput(100%);
 }
+
