--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*
-Errno::ENOENT: No such file or directory @ rb_sysopen - main.scss
+Errno::ENOENT: No such file or directory @ rb_sysopen - sass/main.scss
 
 Backtrace:
 /usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:460:in `read'
@@ -20,4 +20,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory @ rb_sysopen - main.scss"; }
+  content: "Errno::ENOENT: No such file or directory @ rb_sysopen - sass/main.scss"; }
